--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jsonld": "^1.0.2",
     "lodash": "^4.17.10",
     "mkdirp": "^0.5.1",
+    "normalizr": "^3.2.4",
     "ramda": "^0.25.0",
     "tcomb": "^3.2.27"
   },
