--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "tape ./test/*.js | tap-spec"
+    "test": "jest ./test/*.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +17,6 @@
     "tcomb": "^3.2.27"
   },
   "devDependencies": {
-    "tap-spec": "^5.0.0",
-    "tape": "^4.9.1"
+    "jest": "^23.1.0"
   }
 }
