--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest ./test/*.js"
+    "test": "jest ./test/*.js",
+    "generate": "node ./src/scripts/generate-schemas"
   },
   "author": "",
   "license": "ISC",
