--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "main": "index.js",
   "scripts": {
-    "test": "jest ./test/**/*.js",
+    "test": "jest",
     "build": "npm run normalize && npm run generate",
     "generate": "node ./src/scripts/generate-schemas",
     "normalize": "node ./src/scripts/normalize-schemas"
