prettify and fix the schema

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lodash": "^4.17.10",
     "mkdirp": "^0.5.1",
     "normalizr": "^3.2.4",
+    "prettier": "^1.13.6",
     "ramda": "^0.25.0",
     "tcomb": "^3.2.27"
   },
