--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "jest",
     "build": "npm run normalize && npm run generate",
     "generate": "node ./src/scripts/generate-schemas",
-    "normalize": "node ./src/scripts/normalize-schemas"
+    "preprocess": "node ./src/scripts/preprocess-schemas"
   },
   "license": "ISC",
   "repository": {
